--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ url: "/"
 language: zh-Hans
 
 # URL
-baseurl: "/arima-s-notebook"
+baseurl: ""
 # baseurl - For root domain
 permalink: /:year-:month-:day/:title/
 
