--- a/_config.yml
+++ b/_config.yml
@@ -5,29 +5,21 @@
 
 # Basic
 name: "ari[Ma]'s Notebook"
-url: "/"
+url: ""
 language: zh-Hans
 
 # URL
-baseurl: "/arima-s-notebook"
+baseurl: ""
 permalink: /:year-:month-:day/:title/
-
-# Favicon
-favicon:
-  enable: true
-  path: /assets/images/avatar.jpg
 
 # Maekdown
 markdown: kramdown
 kramdown:
   input: GFM
 
-# Site Navigations | 导航
+# 跳转
 navs:
   home: /
-  postlist: /postlist/
-  notes: /arimanotes/
-  sheets: /sheets/
 
 # Scopes
 defaults:
@@ -47,15 +39,6 @@ sass:
   sass_dir: /assets/css
   style: :compressed
 
-# b2t
-b2t: true
-
-# aplayer
-aplayer: true
-
-# mathjax
-mathjax: true
-
 # Highlighter
 highlighter: rouge
 highlight:
@@ -68,27 +51,9 @@ highlight:
 vendors:
   # JQuery
   jquery: /assets/js/jquery-3.6.0.min.js?v=3.6.0
-
-  # jquery Lazyload
-  jq-lazyload: /assets/js/jquery.lazyload.min.js?v=1.9.7
-
-  # Aplayer
-  aplayer: /assets/js/APlayer.min.js?v=1.10.1
-
-  # 页面加载lazyload
-  lazyload: /assets/js/lazyload.js
-
-  # 调整高度
-  heightadjust: /assets/js/height-adjust.js
-
   # 显示侧边导航栏
   shownav: /assets/js/shownav.js
-
   # 顶部进度条
-  pbar: /assets/js/header/progressbar.js
-
+  pbar: /assets/js/processbar.js
   # b2t按钮
   b2t: /assets/js/b2t.js
-
-  # 鼠标效果
-  mouse: /assets/js/mouseEvent.js
